--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 __pycache__/
 *.py[cod]
 
+# backup files:
+*~
+
 # C extensions
 *.so
 
@@ -37,12 +40,11 @@ coverage.xml
 # Translations
 *.mo
 
-# Mr Developer
+# Project files:
+.projectfiles/
 .mr.developer.cfg
 .project
 .pydevproject
-
-# Rope
 .ropeproject
 
 # Django stuff:
